Fixed image specificity issue on Kickbox page.

--- a/_layouts/kickbox.html
+++ b/_layouts/kickbox.html
@@ -8,7 +8,7 @@ layout: default
     <h4>{{ page.subtitle }}</h4>
   </header>
   <section class="content-area kickbox-page">
-    <img src="{{ page.image_path }}" alt="Kickbox NOW!">
+    <img src="{{ page.image_path }}" alt="Kickbox NOW!" class="highlight-image">
     <div class="content">{{ content }}</div>
   </section>
 </main>
