--- a/assets/scss/partials/page/_programs.scss
+++ b/assets/scss/partials/page/_programs.scss
@@ -25,7 +25,7 @@
   }
 }
 .kickbox-page {
-  img {
+  .highlight-image {
     max-height: 5rem;
     float: right;
     filter: drop-shadow(0 0 .5rem $black);
