--- a/assets/scss/partials/page/_front.scss
+++ b/assets/scss/partials/page/_front.scss
@@ -6,6 +6,14 @@
         border-bottom: .25rem solid $red;
         margin-bottom: .25rem;
       }
+      figure {
+        img {
+          margin-bottom: 1rem;
+        }
+      }
+      .subtitle {
+        text-align: center;
+      }
     }
     @include breakpoint($tablet) {
       .front-display-box {
