Added feedback to login form, design tweak for gallery images and colorbox

--- a/_includes/login.html
+++ b/_includes/login.html
@@ -1,5 +1,14 @@
 <form action="" class="login-form">
   <label for="pw">Enter your password:</label>
   <input type="password" id="pw">
+  <div class="feedback">
+    <h4>Incorrect password</h4>
+    <p>Here are a few things to try:</p>
+    <ul>
+      <li>Passwords are case sensitive. Make sure your caps-lock is off and if there are capitals in the password, you're using them.</li>
+      <li>Try again. Typos happen to the best of us.</li>
+      <li>If you believe the password you are entering is correct, but you are still getting this message, call Kaizen IBBA so they can look into it.</li>
+    </ul>
+  </div>
   <button class="btn submit-btn">Sign In <i class="fa fa-sign-in" aria-hidden="true"></i></button>
 </form>
