--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -26,3 +26,4 @@
 @import 'partials/page/gallery';
 @import 'partials/page/accordion';
 @import 'partials/page/social';
+@import 'partials/page/grabber';
