--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     {% include browserupgrade.html %}
 
     {% include header.html %}
+    {% include contact-grabber.html %}
     <div class="site-wrap">{{ content }}</div>
     {% include footer.html %}
 
