--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -6,8 +6,9 @@ layout: page
   <p>At Kaizen International Black Belt Academy, we believe in providing opportunities for community connection and personal growth. We hope you'll find areas to get involved, grow and make connections. This is where we'll keep you posted!</p>
 </article>
 <section class="events posts-area page-content-area">
-  {% for post in site.articles %}
-    {% if post.published %}
+  {% assign posts = site.articles | sort: 'event_date' %}
+  {% for post in posts %}
+    {% if post.published and site.time < post.event_date %}
       <a href="{{ post.permalink }}">
         <article class="post page-content-item">
           <header class="post-header page-content-header">
