--- a/assets/scss/partials/layout/_header.scss
+++ b/assets/scss/partials/layout/_header.scss
@@ -30,10 +30,11 @@
   .logo-section {
     grid-area: logo;
     img {
+      position: relative;
       max-height: 6.25rem;
       margin-bottom: -6.25rem;
-      //
       filter: drop-shadow(0 0 .25rem $black);
+      z-index: 102;
       transition: {
         property: max-height, margin;
         duration: .5s;
