--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,12 @@
 <!--[if lte IE 10]><html class="no-js lte-ie10" lang="en"><![endif]-->
 <!--[if gt IE 10]><!--><html class="no-js" lang="en"><!--<![endif]-->
   {% include head.html %}
-  <body class="not-logged-in">
+  {% if page.url == "/" %}
+    <body class="not-logged-in front-page">
+  {% else %}
+    <body class="not-logged-in">
+  {% endif %}
+
     {% include browserupgrade.html %}
 
     {% include header.html %}
