--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -27,3 +27,4 @@
 @import 'partials/page/accordion';
 @import 'partials/page/social';
 @import 'partials/page/grabber';
+@import 'partials/page/contact-form';
