--- a/assets/scss/partials/page/_page.scss
+++ b/assets/scss/partials/page/_page.scss
@@ -4,7 +4,11 @@
     padding: 1rem;
     margin-bottom: 1rem;
     &:nth-of-type(odd) {
-      background: linear-gradient(to bottom left, rgba($white, .1), rgba(lighten($red, 10%), .1));
+      background: linear-gradient(
+        to bottom left,
+        rgba($white, .1),
+        rgba(lighten($red, 10%), .1)
+      );
     }
     &:nth-of-type(even) {
       background: linear-gradient(to bottom right, rgba($white, .1), rgba(lighten($red, 10%), .1));
