--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -34,9 +34,9 @@ layout: default
     <h2>Events:</h2>
   </header>
   <section class="events posts-area page-content-area">
-    {% assign posts = site.articles | sort: 'event_date' | limit: 2 %}
+    {% assign posts = site.articles | where:"published","true" | sort: 'event_date' %}
     {% for post in posts %}
-      {% if post.published and site.time < post.event_date %}
+      {% if site.time < post.event_date %}
         <a href="{{ post.permalink }}">
           <article class="post page-content-item">
             <header class="post-header page-content-header">
