Further form updates

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -8,6 +8,7 @@
       <option value="email">Email</option>
       <option value="text">Text</option>
     </select>
+    <span class="light"> (choose)</span>
   </p>
   <p class="contact-area contact-name-area">
     <span>My name is </span>
@@ -26,22 +27,41 @@
     <textarea id="contact-information" placeholder="Tell us about yourself / your child, ask anything you like." name="comments"></textarea>
   </p>
   <p class="contact-area contact-programs-area">
-    <div>Anything in particular you'd like to get information about?</div>
+    <h4>Need information about any classes in particular?</h4>
     <div class="checkbox-wrap">
       <div class="checkbox-item">
-        <input type="checkbox" id="kickbox" name="kickbox-now"><label for="kickbox"> Kickbox NOW!</label>
+        <input type="checkbox" id="kickbox" name="kickbox-now">
+        <label for="kickbox"> Kickbox NOW!</label>
       </div>
       <div class="checkbox-item">
-        <input type="checkbox" id="dragons" name="dragons"><label for="dragons"> Little Dragons</label>
+        <input type="checkbox" id="dragons" name="dragons">
+        <label for="dragons"> Little Dragons</label>
+        <span class="light"> (3-6 yrs. old)</span>
       </div>
       <div class="checkbox-item">
-        <input type="checkbox" id="tigers" name="tigers-eagles"><label for="tigers"> Tigers / Eagles</label>
+        <input type="checkbox" id="tigers" name="tigers-eagles">
+        <label for="tigers"> Tigers / Eagles</label>
+        <span class="light"> (6-8 yrs. old)</span>
       </div>
       <div class="checkbox-item">
-        <input type="checkbox" id="panthers" name="panthers"><label for="panthers"> Panthers</label>
+        <input type="checkbox" id="panthers" name="panthers">
+        <label for="panthers"> Panthers</label>
+        <span class="light"> (8-14 yrs. old)</span>
       </div>
       <div class="checkbox-item">
-        <input type="checkbox" id="adults" name="adults"><label for="adults"> Adult classess</label>
+        <input type="checkbox" id="adults" name="adults">
+        <label for="adults"> Adult classes</label>
+        <span class="light"> (14+ yrs. old)</span>
+      </div>
+      <div class="checkbox-item">
+        <input type="checkbox" id="stick" name="stick">
+        <label for="stick"> Stick club</label>
+        <span class="light"> (12+ yrs. old)</span>
+      </div>
+      <div class="checkbox-item">
+        <input type="checkbox" id="tai-chi" name="tai-chi">
+        <label for="tai-chi"> Tai Chi</label>
+        <span class="light"> (14+ yrs. old)</span>
       </div>
     </div>
   </p>
