--- a/assets/scss/partials/page/_contact-form.scss
+++ b/assets/scss/partials/page/_contact-form.scss
@@ -10,6 +10,9 @@
     border-bottom: .25rem solid rgba($white, .5);
     margin: 0 0 .5rem;
   }
+  .light {
+    color: rgba($white, .5);
+  }
   .contact-area {
     max-height: 6rem;
     filter: opacity(1);
