Added editable attribute to the title of the overlay

--- a/_includes/contact-grabber.html
+++ b/_includes/contact-grabber.html
@@ -1,7 +1,7 @@
 <div class="overlay">
   <header>
-    <h3>We're all about community</h3>
-    <h4>Send us a message and we'll talk to you</h4>
+    <h3 class="editable">We're all about community</h3>
+    <h4 class="editable">Send us a message and we'll talk to you</h4>
   </header>
   <div class="close btn"><i class="fa fa-times" aria-hidden="true"></i></div>
   {% include contact-form.html %}
