Added MAAB logo to the social footer, fixed a few padding styles on some of the wrappers

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -5,4 +5,5 @@
 		<li><a href="{{ site.facebook }}" class="btn"><i class="fa fa-facebook-square" aria-hidden="true"></i> Follow us on Facebook</a></li>
 		<li><a href="{{ site.youtube }}" class="btn"><i class="fa fa-youtube-play" aria-hidden="true"></i> Follow us on YouTube</a></li>
 	</ul>
+	<div class="right"><img src="/assets/images/maab.png" alt="MAAB"></div>
 </footer>
