--- a/assets/scss/partials/page/_social.scss
+++ b/assets/scss/partials/page/_social.scss
@@ -12,4 +12,15 @@
       margin: 0 .5rem 1rem 0;
     }
   }
+  .right img {
+    max-width: 150px;
+    max-height: 150px;
+    filter: drop-shadow(.125rem .25rem .5rem $black);
+  }
+  @include breakpoint($desktop) {
+    .right {
+      float: right;
+      margin: -5rem -3rem -2rem 0;
+    }
+  }
 }
