Updated 'assets/scss/partials/global/_settings.scss' via CloudCannon

--- a/assets/scss/partials/global/_settings.scss
+++ b/assets/scss/partials/global/_settings.scss
@@ -10,7 +10,7 @@ body {
     weight: 100;
   }
   background: {
-    image: linear-gradient(transparent, darken($red, 25%), darken($red, 15%)), url('../images/bg.png');
+    image: linear-gradient(transparent, darken($red, 25%), darken($red, 15%)), url('../images/bg2.png');
     color: $black;
     size: 100% auto;
     repeat: no-repeat;
