Contact form update for multiple emails

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,5 +1,5 @@
 <form method="POST" action="http://formspree.io/sensei.jauch@gmail.com" class="contact-form">
-  <input type="hidden" name="_cc" value="mr.bachenbergibba@gmail.com,staff.ftc.ibba@gmail.com">
+  <input type="hidden" name="_cc" value="mr.bachenbergibba@gmail.com,mrs.jauch.ibba@gmail.com,sensei.jauch@gmail.com">
   <h4>Contact us:</h4>
   <p class="contact-area contact-type-area">
     <span>Please contact me by </span>
