--- a/assets/scss/partials/layout/_main.scss
+++ b/assets/scss/partials/layout/_main.scss
@@ -10,7 +10,7 @@ main {
   min-height: 75vh;
   max-width: 80rem;
   margin: 0 auto 3rem;
-  padding: 1rem 1rem 15rem;
+  padding: 1rem 1rem 18rem;
   background: linear-gradient(to bottom right, lighten($black, 5%), darken($red, 25%));
   box-shadow: 0 0 2rem $black;
   &.front {
@@ -20,8 +20,11 @@ main {
       margin: 20rem auto 2rem;
     }
   }
+  @include breakpoint($tablet) {
+    padding-bottom: 17rem;
+  }
   @include breakpoint($desktop) {
-    padding: 1rem 1rem 7rem;
+    padding-bottom: 10rem;
   }
   @include breakpoint($desktop-large) {
     max-width: 100rem;
