--- a/_includes/social.html
+++ b/_includes/social.html
@@ -5,5 +5,10 @@
 		<li><a href="{{ site.facebook }}" class="btn"><i class="fa fa-facebook-square" aria-hidden="true"></i> Follow us on Facebook</a></li>
 		<li><a href="{{ site.youtube }}" class="btn"><i class="fa fa-youtube-play" aria-hidden="true"></i> Follow us on YouTube</a></li>
 	</ul>
-	<div class="right"><img src="/assets/images/maab.png" alt="MAAB"></div>
+	<div class="bbb-seal">
+			<a href="https://www.bbb.org/wyoming-and-northern-colorado/business-reviews/martial-arts/kaizen-black-belt-academy-in-fort-collins-co-46095153/#sealclick" target="_blank" rel="nofollow"><img src="http://seal-wynco.bbb.org/seals/blue-seal-250-52-whitetxt-bbb-46095153.png" style="border: 0;" alt="Kaizen Black Belt Academy BBB Business Review" /></a>
+	</div>
+	<div class="maab-seal">
+		<img src="/assets/images/maab.png" alt="MAAB">
+	</div>
 </footer>
