--- a/assets/scss/partials/page/_social.scss
+++ b/assets/scss/partials/page/_social.scss
@@ -12,15 +12,18 @@
       margin: 0 .5rem 1rem 0;
     }
   }
-  .right img {
+  .bbb-seal {
+    margin: 0 0 .5rem;
+  }
+  .maab-seal img {
     max-width: 150px;
     max-height: 150px;
     filter: drop-shadow(.125rem .25rem .5rem $black);
   }
   @include breakpoint($desktop) {
-    .right {
+    .maab-seal {
       float: right;
-      margin: -5rem -3rem -2rem 0;
+      margin: -6rem -1.5rem -2rem 0;
     }
   }
 }
