--- a/_includes/events.html
+++ b/_includes/events.html
@@ -27,6 +27,10 @@
   <iframe src="https://calendar.google.com/calendar/embed?src=1ni3bbr5froteumuouc5vuqg1k%40group.calendar.google.com&ctz=America/Denver" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
 </article>
 <article class="calendar page-content-item">
+  <header class="page-content-header"><h4>Black Belt Test Prep:</h4></header>
+  <iframe src="https://calendar.google.com/calendar/embed?src=spbl6q1sp4c8nco8fvuui2kavo%40group.calendar.google.com&ctz=America%2FDenver" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+</article>
+<article class="calendar page-content-item">
   <header class="page-content-header"><h4>Masters:</h4></header>
   <iframe src="https://calendar.google.com/calendar/embed?src=541lgc266fjvrakt3f9so892vk%40group.calendar.google.com&ctz=America/Denver" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
 </article>
