--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -28,3 +28,4 @@
 @import 'partials/page/social';
 @import 'partials/page/grabber';
 @import 'partials/page/contact-form';
+// @import 'partials/page/tag';
