--- a/assets/scss/partials/page/_grabber.scss
+++ b/assets/scss/partials/page/_grabber.scss
@@ -1,5 +1,3 @@
-// _grabber.scss
-
 .overlay {
   position: absolute;
   top: -1000vh;
@@ -25,7 +23,7 @@
     margin: 3rem auto;
     text-align: center;
     h3 {
-      color: $red;
+      color: lighten($red, 10%);
     }
     h4 {
       color: $orange;
