Added JSON-LD, Made some scripts local, improved page titles

--- a/assets/scss/partials/page/_page.scss
+++ b/assets/scss/partials/page/_page.scss
@@ -9,38 +9,38 @@
     &:nth-of-type(even) {
       background: linear-gradient(to bottom right, rgba($white, .1), rgba(lighten($red, 10%), .1));
     }
-    .page-content-header {
-      border-bottom: .25rem solid rgba($black, .75);
-      margin-bottom: .5rem;
-      h4 {
-        font-family: 'Shojumaru', cursive;
-        font-size: 1.2rem;
-        letter-spacing: .125rem;
-        color: lighten($red, 10%);
-        text-shadow: 0.05rem 0.05rem $white;
-      }
-      h5 {
-        color: rgba($white, .75);
-        margin: .25rem 1rem;
-        text-shadow: 0.0625em 0.0625em $black;
-        font: {
-          style: italic;
-          size: 1.2rem;
-        }
-      }
-    }
     p {
       padding: 0 1rem;
     }
-    @include breakpoint($tablet) {
-      h4 {
-        display: inline-block;
-        font-size: 1.5rem;
-      }
-      h5 {
-        float: right;
-        font-size: 1.5rem;
-      }
+  }
+}
+.page-content-header {
+  border-bottom: .25rem solid rgba($black, .75);
+  margin-bottom: .5rem;
+  h4 {
+    font-family: 'Shojumaru', cursive;
+    font-size: 1.2rem;
+    letter-spacing: .125rem;
+    color: $red;
+    text-shadow: 0.05rem 0.05rem $white;
+  }
+  h5 {
+    color: rgba($white, .75);
+    margin: .25rem 1rem;
+    text-shadow: 0.0625em 0.0625em $black;
+    font: {
+      style: italic;
+      size: 1.2rem;
+    }
+  }
+  @include breakpoint($tablet) {
+    h4 {
+      display: inline-block;
+      font-size: 1.5rem;
+    }
+    h5 {
+      float: right;
+      font-size: 1.5rem;
     }
   }
 }
