--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,20 +4,50 @@
 	<link rel="canonical" href="{{ page.url | prepend:site.url }}" />
 	<link rel="shortlink" href="{{ page.url | prepend:site.url }}" />
 	<meta name="robots" content="follow, index" />
-	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-	<meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
-	<meta name="keywords" content="{% if page.tags %}{{ page.tags | join: ', ' | escape }}{% else %}{{ site.keywords }}{% endif %}"/>
+	<title>
+		{% if page.title %}
+			 {{ site.title }} : {{ page.title }}
+		{% else %}
+			{{ site.title }}
+		{% endif %}
+	</title>
+	<meta name="description" content="
+		{% if page.description %}
+			{{ page.description }}
+		{% else %}
+			{{ site.description }}
+		{% endif %}
+	">
+	<meta name="keywords" content="
+		{% if page.tags %}
+			{{ page.tags | join: ', ' | escape }}
+		{% else %}
+			{{ site.keywords }}
+		{% endif %}
+	"/>
 	<meta name="google-site-verification" content="B7sNiJPxLSv5BgVhWJiO-5te2mDHFXc6dJBpcAdB0as" />
 	<!-- Open Graph -->
 	<meta property="og:url" content="{{ page.url | prepend:site.url }}" />
 	<meta property="og:site_name" content="{{ site.title }}" />
-	<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
-	<meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
+	<meta property="og:title" content="
+		{% if page.title %}
+			{{ page.title }}
+		{% else %}
+			{{ site.title }}
+		{% endif %}
+	" />
+	<meta property="og:description" content="
+		{% if page.description %}
+			{{ page.description }}
+		{% else %}
+			{{ site.description }}
+		{% endif %}
+	" />
 	{% if page.path contains '_posts' %}<link rel="alternate" type="application/atom+xml" title="{{ site.title }} Blog" href="/atom.xml" />{% endif %}
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css" media="screen" />
-	<link rel="stylesheet" href="/assets/css/style.css" media="screen" />
+	<link rel="stylesheet" href="/assets/css/style.css" media="screen" /><link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/assets/css/colorbox.css">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,100i,400,400i,700|Shojumaru" rel="stylesheet">
 
@@ -45,6 +75,16 @@
 
 	<!-- HTML 5 Shiv -->
 	<!--[if lt IE 9]> <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script> <![endif]-->
+
+	<script type="application/ld+json" src="./LD.json">
+		{
+			"@context": "http://schema.org",
+			"sameAs": [
+				"https://www.facebook.com/ibba.fc/",
+				"https://www.youtube.com/channel/UCkcOTCK82WIFTDpETiy1OJQ"
+			]
+		}
+	</script>
 
 	{% if site.google_analytics_tracking_id %}
 	  <script>
