--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,8 +1,6 @@
-<script src="//code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.1/picturefill.min.js"></script>
-<script>window.jQuery || document.write('<script src="/assets/js/prod/jquery-1-11-1.min.js"><\/script>')</script>
-<script src="//use.fontawesome.com/bf7c42290d.js"></script>
+<script async src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+<script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.1/picturefill.min.js"></script>
 
 <script src="/assets/js/prod/script.js"></script>
 <script src="/assets/js/prod/jquery.colorbox-min.js"></script>
-<script src="//unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+<script src="/assets/js/prod/scrollreveal.min.js"></script>
