--- a/assets/scss/partials/page/_events.scss
+++ b/assets/scss/partials/page/_events.scss
@@ -1,9 +1,4 @@
 .posts-area {
-  .post {
-    img {
-      max-height: 25rem;
-    }
-  }
   .pagination {
     width: 100%;
     display: inline-grid;
@@ -19,6 +14,58 @@
     }
     .next {
       grid-area: next;
+    }
+  }
+}
+.post-image-wrap {
+  .post-image {
+    margin: 0 auto 1rem;
+    max-height: 15rem;
+    box-shadow: 0.125rem 0.25rem 1rem rgba($black, .5);
+    border: .25rem solid $red;
+  }
+}
+.post-footer {
+  position: absolute;
+  bottom: 1rem;
+  left: 2rem;
+}
+.post-date {
+  padding-top: .5rem;
+  color: rgba($white, .5);
+}
+.post-tag-filter {
+  padding: 1rem;
+  background: linear-gradient(to bottom right, rgba($white, .1), rgba(lighten($red, 10%), .1));
+}
+@include breakpoint($tablet) {
+  .post {
+    min-height: 17rem;
+  }
+  .post-header,
+  .post-description {
+    padding-right: 12rem !important;
+  }
+  .post-image-wrap {
+    .post-image {
+      margin: -3rem 0 0;
+      float: right;
+      max-width: 12rem;
+    }
+  }
+}
+@include breakpoint($desktop) {
+  .post-page-split-wrap {
+    width: 100%;
+    display: inline-flex;
+    justify-content: space-between;
+    .post-page-left {
+      flex-basis: 70%;
+      margin-right: 1rem;
+    }
+    .post-page-right {
+      flex-basis: 30%;
+      padding-top: 1rem;
     }
   }
 }
