--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,9 @@ layout: default
   <header class="page-header">
     <h1>{{ page.title }}</h1>
   </header>
-  <img src="{{ page.image_path }}" alt="{{ page.title }}" class="post-image">
+  <div class="post-full-page-image-wrap">
+    <img src="{{ page.image_path }}" alt="{{ page.title }}" class="post-image">
+  </div>
   <section class="content-area">{{ content }}</section>
   {% include social.html %}
 </main>
