--- a/assets/scss/partials/page/_page.scss
+++ b/assets/scss/partials/page/_page.scss
@@ -1,5 +1,6 @@
 .page-content-area {
   margin-top: 1rem;
+  min-height: 20rem;
   .page-content-item {
     padding: 1rem;
     margin-bottom: 1rem;
