--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -11,7 +11,7 @@ layout: page
 <section class="events posts-area page-content-area">
   {% assign posts = site.articles | where: 'published', 'true' | sort: 'event_date' %} {% for post in posts %} {% if site.time
   < post.event_date %} <a href="{{ post.permalink }}">
-    <article class="post page-content-item">
+    <article class="post page-content-item floating-image-container">
       <header class="post-header page-content-header">
         <h4 class="post-title">{{ post.title }}</h4>
       </header>
