--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,12 +3,12 @@ layout: default
 ---
 
 <main>
-  <header class="page-header">
+  <header class="page-header post-content-header">
     <h1>{{ page.title }}</h1>
   </header>
   <div class="post-full-page-image-wrap">
     <img src="{{ page.image_path }}" alt="{{ page.title }}" class="post-image">
   </div>
-  <section class="content-area">{{ content }}</section>
+  <section class="content-area post-content-text">{{ content }}</section>
   {% include social.html %}
 </main>
