Padding change for full page posts

--- a/assets/scss/partials/page/_events.scss
+++ b/assets/scss/partials/page/_events.scss
@@ -66,6 +66,9 @@
 	.post-content-header {
 		padding-right: 12rem;
 	}
+	.post-content-text {
+		padding-right: 12rem;
+	}
 }
 @include breakpoint($desktop) {
 	.post-page-split-wrap {
