--- a/assets/scss/partials/page/_front.scss
+++ b/assets/scss/partials/page/_front.scss
@@ -30,10 +30,12 @@
       }
     }
     @include breakpoint($desktop) {
-      display: inline-grid;
-      grid: {
-        template-columns: repeat(3, 1fr);
-        column-gap: 1rem;
+      display: inline-flex;
+      justify-content: space-between;
+      .front-box-wrapper {
+        min-width: 30%;
+        flex-basis: 30%;
+        flex-grow: 1;
       }
       .front-display-box {
         padding: 1rem;
