Added new calendar, testing on live build

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -4,3 +4,7 @@
 <script src="/assets/js/prod/script.js"></script>
 <script src="/assets/js/prod/jquery.colorbox-min.js"></script>
 <script src="/assets/js/prod/scrollreveal.min.js"></script>
+
+{% if page.layout == 'events' %}
+  <script src="https://kaizeninternational.zenplanner.com/zenplanner/skin/js/resize.js"></script>
+{% endif %}
