--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -52,7 +52,6 @@ layout: page
     <header class="page-content-header">
       <h4>Calendar:</h4>
     </header>
-    <iframe src="https://calendar.google.com/calendar/embed?src=e388utric889edforu1lf069tc%40group.calendar.google.com&ctz=America/Denver"
-      style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://kaizeninternational.zenplanner.com/zenplanner/portal/calendar.cfm?frame=true" style="width:100%; height:500px;" onLoad="window.scroll(0,0);" frameborder="0" id="idZenPlannerFrame"></iframe>
   </article>
 </section>
