--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -52,6 +52,7 @@ layout: page
     <header class="page-content-header">
       <h4>Calendar:</h4>
     </header>
+    <a class="btn calendar-btn" href="https://kaizeninternational.zenplanner.com/zenplanner/portal/calendar.cfm">See Our Full Calendar</a>
     <iframe src="https://kaizeninternational.zenplanner.com/zenplanner/portal/calendar.cfm?frame=true" style="width:100%; height:500px;" onLoad="window.scroll(0,0);" frameborder="0" id="idZenPlannerFrame"></iframe>
   </article>
 </section>
